[package]
name = "pmtu"
version = "0.1.0"
edition = "2021"
authors = ["kanarus <kanarus786@gmail.com>"]
description = "proc macro test utils"
documentation = "https://docs.rs/pmtu/"
homepage = "https://crates.io/crates/pmtu"
repository = "https://github.com/kana-rus/pmtu"
readme = "README.md"
keywords = ["proc-macro", "test"]
categories = ["development-tools::procedural-macro-helpers"]
license = "MIT"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

[lib]
proc-macro = true